--- a/src/main/webapp/credit/credit_company_inward_access_age.xhtml
+++ b/src/main/webapp/credit/credit_company_inward_access_age.xhtml
@@ -10,7 +10,7 @@
         <ui:composition template="/credit/index_inward_due_access.xhtml">
             <ui:define name="subcontent">
                 <h:form>            
-                    <p:commandButton id="btnSearch" ajax="false" value="Process Access Age" action="#{creditCompanyDueController.createInwardAgeTableAccess()}"  />
+                    <p:commandButton class="my-2" id="btnSearch" ajax="false" value="Process Access Age" action="#{creditCompanyDueController.createInwardAgeTableAccess()}"  />
                     <p:defaultCommand target="btnSearch"/>
                     
                     <p:dataTable id="lst" value="#{creditCompanyDueController.creditCompanyAge}" var="i"
