--- a/src/main/webapp/admin/institutions/admin_mange_application_preferences.xhtml
+++ b/src/main/webapp/admin/institutions/admin_mange_application_preferences.xhtml
@@ -11,7 +11,7 @@
         <ui:composition template="/admin/institutions/admin_institutions_index.xhtml">
             <ui:define name="admin">
                 <h:form>
-                    <ez:preferences/>
+                    <ez:application_preferences></ez:application_preferences>
                 </h:form>
             </ui:define>
         </ui:composition>
