--- a/src/main/webapp/analytics/index.xhtml
+++ b/src/main/webapp/analytics/index.xhtml
@@ -43,6 +43,13 @@
                                             <p:commandButton ajax="false" value="Referral Test List" action="#"  styleClass="linkButton"></p:commandButton>
                                         </div>
                                     </p:tab>
+                                    <p:tab title="SMS Reports">
+                                        <div class="d-grid gap-2">
+                                            <p:commandButton ajax="false" value="SMS List" action="#"  styleClass="linkButton"></p:commandButton>
+                                            <p:commandButton ajax="false" value="SMS faild list" action="report_list_lab_tests"  styleClass="linkButton"></p:commandButton>
+                                        </div>
+                                    </p:tab>    
+                                    
                                 </p:accordionPanel>
                                 </h:form>
                             </div>
