--- a/src/main/webapp/admin/items/downloads.xhtml
+++ b/src/main/webapp/admin/items/downloads.xhtml
@@ -15,7 +15,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <p:commandButton 
-                                value="Download as Excel" 
+                                value="Download Services as an Excel" 
                                 class="w-100"
                                 ajax="false"
                                 action="#{serviceController.downloadServicesAsExcel}" />
