Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd/opd_bill_search.xhtml
+++ b/src/main/webapp/opd/opd_bill_search.xhtml
@@ -102,9 +102,9 @@
                                     <p:column headerText="Billed For" sortBy="#{bill.departmentName}" filterBy="#{bill.departmentName}" filterMatchMode="contains" >                                
                                         <h:outputLabel id="insDep" value="#{bill.departmentName}" />
                                     </p:column>
-                                    <p:column headerText="Billed At"  sortBy="#{bill.departmentName}" filterBy="#{bill.departmentName}"  >                                
+<!--                                    <p:column headerText="Billed At"  sortBy="#{bill.departmentName}" filterBy="#{bill.departmentName}"  >                                
                                         <h:outputLabel value="#{bill.departmentName}" />
-                                    </p:column>
+                                    </p:column>-->
                                     <p:column headerText="Billed by"  sortBy="#{bill.userName}" filterBy="#{bill.userName}" >
                                         <h:outputLabel value="#{bill.userName}" >                                      
                                         </h:outputLabel>
