Closes #1144 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/opd_search_billitem_own.xhtml
+++ b/src/main/webapp/opd_search_billitem_own.xhtml
@@ -42,7 +42,7 @@
                                     <p:inputText autocomplete="off" value="#{searchController.searchKeyword.patientName}" class="form-control"/>
                                     <h:outputLabel value="Patient Phone"/>
                                     <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.patientPhone}" class="form-control"/>
-                                    <h:outputLabel value="Institution Name"/>
+                                    <h:outputLabel value="To Institution Name"/>
                                     <p:inputText autocomplete="off"  value="#{searchController.searchKeyword.toInstitution}" class="form-control"/>
                                 
 
