--- a/src/main/webapp/analytics/sms_faild.xhtml
+++ b/src/main/webapp/analytics/sms_faild.xhtml
@@ -8,68 +8,70 @@
     <h:body>
         <ui:composition template="/analytics/index.xhtml">
             <ui:define name="report">
-                <p:panel>
-                    <f:facet name="header" >
-                        <h:outputLabel value="All Faild SMS List"/>                          
-                    </f:facet>
-                    <h:panelGrid columns="2" >
-                        <h:outputLabel value="From Date"/>
-                        <p:datePicker styleClass="dateTimePicker" 
-                                      id="fromDate" 
-                                      value="#{smsController.fromDate}" 
-                                      showTime="true"
-                                      pattern="dd MMMM yyyy hh:mm" >      
-                        </p:datePicker>
-                        <h:outputLabel value="To Date"/>
-                        <p:datePicker id="toDate" value="#{smsController.toDate}" 
-                                      showTime="true"
-                                      pattern="dd MMMM yyyy hh:mm" >                                                                              
-                        </p:datePicker>
-                        <p:commandButton id="btnSearch" ajax="false" value="Search" 
-                                         action="#{smsController.fillAllFaildSms}"/>
-                        <p:commandButton id="btnExcel" ajax="false" value="Excel" >
-                            <p:dataExporter fileName="All Bills" type="xls" target="tblBills" ></p:dataExporter>
-                        </p:commandButton>
-                    </h:panelGrid>
-
-                    <p:dataTable rowIndexVar="i" id="tblBills" 
-                                 value="#{smsController.faildsms}"
-                                 reflow="true"
-                                 var="sms"  
-                                 style="min-width: 100%;"  
-                                 paginator="true"
-                                 rows="10"
-                                 paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                 rowsPerPageTemplate="5,10,15"
-                                 >
-                        <p:column headerText="ID" styleClass="alignTop" width="15">
-                            
-                            <h:outputLabel value="#{sms.createdAt}">
-                                <f:convertDateTime pattern="dd MMMM yyyy hh:mm" ></f:convertDateTime>
-                            </h:outputLabel>
-                        </p:column>
-                        <p:column headerText="SMS Type" styleClass="alignTop" width="15">
-                            <h:outputLabel value="#{sms.smsType}"/>
-                        </p:column>
-                        <p:column headerText="ID" styleClass="alignTop" width="15">
-                            <h:outputLabel value="#{sms.sentAt}"/>
-                        </p:column>
-                        <p:column headerText="SMS Type" styleClass="alignTop" width="15">
-                            <h:outputLabel value="#{sms.receivedMessage}"/>
-                        </p:column>
-                        <p:column headerText="Action" styleClass="alignTop" width="15">
-                            <p:commandButton value="Send Now">
-                                
+                <h:form>
+                    <p:panel>
+                        <f:facet name="header" >
+                            <h:outputLabel value="All Faild SMS List"/>                          
+                        </f:facet>
+                        <h:panelGrid columns="2" >
+                            <h:outputLabel value="From Date"/>
+                            <p:datePicker styleClass="dateTimePicker" 
+                                          id="fromDate" 
+                                          value="#{smsController.fromDate}" 
+                                          showTime="true"
+                                          pattern="dd MMMM yyyy hh:mm" >      
+                            </p:datePicker>
+                            <h:outputLabel value="To Date"/>
+                            <p:datePicker id="toDate" value="#{smsController.toDate}" 
+                                          showTime="true"
+                                          pattern="dd MMMM yyyy hh:mm" >                                                                              
+                            </p:datePicker>
+                            <p:commandButton id="btnSearch" ajax="false" value="Search" 
+                                             action="#{smsController.fillAllFaildSms()}"/>
+                            <p:commandButton id="btnExcel" ajax="false" value="Excel" >
+                                <p:dataExporter fileName="All Bills" type="xls" target="tblBills" ></p:dataExporter>
                             </p:commandButton>
-                        </p:column>
-                    </p:dataTable>
+                        </h:panelGrid>
+
+                        <p:dataTable rowIndexVar="i" id="tblBills" 
+                                     value="#{smsController.faildsms}"
+                                     reflow="true"
+                                     var="sms"  
+                                     style="min-width: 100%;"  
+                                     paginator="true"
+                                     rows="10"
+                                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                     rowsPerPageTemplate="5,10,15"
+                                     >
+                            <p:column headerText="ID" styleClass="alignTop" width="15">
+
+                                <h:outputLabel value="#{sms.createdAt}">
+                                    <f:convertDateTime pattern="dd MMMM yyyy hh:mm" ></f:convertDateTime>
+                                </h:outputLabel>
+                            </p:column>
+                            <p:column headerText="Patient Report" styleClass="alignTop" width="15">
+                                <h:outputLabel value="#{sms.patientReport}"/>
+                            </p:column>
+                            <p:column headerText="Sent At" styleClass="alignTop" width="15">
+                                <h:outputLabel value="#{sms.sentAt}"/>
+                            </p:column>
+                            <p:column headerText="Message" styleClass="alignTop" width="15">
+                                <h:outputLabel value="#{sms.sendingMessage}"/>
+                            </p:column>
+                            <p:column headerText="Action" styleClass="alignTop" width="15">
+                                <p:commandButton value="Send Now">
+
+                                </p:commandButton>
+                            </p:column>
+                        </p:dataTable>
 
 
 
 
 
 
-                </p:panel>
+                    </p:panel>
+                </h:form>
 
 
             </ui:define>
