Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/opd/patient.xhtml
+++ b/src/main/webapp/opd/patient.xhtml
@@ -88,7 +88,7 @@
                                 <p:commandButton value="Admit" 
                                                  action="#{patientController.navigateToAdmitFromPatientProfile()}" 
                                                  ajax="false" 
-                                                 styleClass="mx-1 mb-2">
+                                                 styleClass="mx-2">
 
                                 </p:commandButton>
                                 <p:commandButton value="OPD Bill" 
@@ -110,7 +110,7 @@
                                 <p:commandButton value="Inward Appointments"
                                                  action="#{patientController.navigateToInwardAppointmentFromPatientProfile()}"
                                                  ajax="false"
-                                                 styleClass="mx-1 mb-2">
+                                                 styleClass="mx-2">
 
                                 </p:commandButton>
                             </div>
